manifests/home-automation/zwaveadmin/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zwaveadmin
  namespace: homeassist
spec:
  serviceName: zwaveadmin
  replicas: 1
  revisionHistoryLimit: 2
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: zwaveadmin
  template:
    metadata:
      labels:
        app: zwaveadmin
        name: zwaveadmin
    spec:
      restartPolicy: Always
      automountServiceAccountToken: false
      priorityClassName: high-priority
      nodeName: nuc4
      containers:
      - name: zwaveadmin
        image: docker.io/zwavejs/zwave-js-ui:9.30.1
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            cpu: 3m
            memory: 150Mi
            smarter-devices/ttyUSB0: 1
          limits:
            # cpu: 300m
            memory: 250Mi
            smarter-devices/ttyUSB0: 1
        ports:
        - containerPort: 3000
          name: zwave
        - containerPort: 8091
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          periodSeconds: 60
        volumeMounts:
        - name: zwaveadmin
          mountPath: /usr/src/app/store
      volumes:
      - name: zwaveadmin
        persistentVolumeClaim:
          claimName: nfs-zwaveadmin
