manifests/home-automation/zwaveadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zwaveadmin-service
  name: zwaveadmin-service
  namespace: homeassist
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
    targetPort: zwave
    name: zwave
  - port: 8091
    protocol: TCP
    targetPort: http
    name: web
  selector:
    app: zwaveadmin
