manifests/home-automation/zwaveadmin/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zwaveadmin
  namespace: homeassist
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "zwaveadmin.ucdialplans.com"
  rules:
  - backendRefs:
    - name: zwaveadmin-service
      namespace: homeassist
      kind: Service
      port: 8091
