manifests/home-automation/zwaveadmin/networkpolicy_DISABLED.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zwaveadmin
  namespace: homeassist
spec:
  endpointSelector:
    matchLabels:
      app: zwaveadmin
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8091"        
    - fromEndpoints:
        - matchLabels:
            app: homeassist
      toPorts:
        - ports:
            - port: "3000"
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
            - port: "5353"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
